# biblio-review

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml
data/logs/: session_20260315_091346.jsonl
data/processed/: dedup_report.json  queries.json  queries_optimized.json  query_comparison_report.md  search_strategy.md
docs/: current_queries.md  objectives.md
src/biblio_review/: __init__.py  cli.py
src/biblio_review/agents/: __init__.py  base.py  bibliometric_engine.py  comparator.py  corpus_auditor.py  metadata_processor.py  paper_writer.py  query_optimizer.py  screener.py
src/biblio_review/engines/: __init__.py
src/biblio_review/utils/: __init__.py  batch.py  checkpoints.py  config.py  logging.py
tests/: test_batch.py  test_checkpoints.py  test_config.py
